--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mongo-python-driver"]
 	path = mongo-python-driver
-	url = git://github.com/mongodb/mongo-python-driver.git
+	url = git@github.com:MblKiTA/mongo-python-driver.git
